<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nano_apps">My Nano Degree Apps!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_bigger">Build It Bigger</string>
    <string name="make_material">Make your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
</resources>
