<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.android.myappportfolio.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="36dp"
            android:text="@string/my_nano_apps"
            android:textSize="19dp" />


        <Button
            style="@style/ButtonStyle"
            android:onClick="launchPopularMovies"
            android:text="@string/popular_movies" />

        <Button
            style="@style/ButtonStyle"
            android:onClick="launchStockHawk"
            android:text="@string/stock_hawk" />

        <Button
            style="@style/ButtonStyle"
            android:onClick="launchBuildItBigger"
            android:text="@string/build_bigger" />

        <Button
            style="@style/ButtonStyle"
            android:onClick="launchMakeYourAppMaterial"
            android:text="@string/make_material" />

        <Button
            style="@style/ButtonStyle"
            android:onClick="launchGoUbiquitous"
            android:text="@string/go_ubiquitous" />

        <Button
            style="@style/ButtonStyle"
            android:onClick="launchCapstone"
            android:text="@string/capstone" />
    </LinearLayout>


</LinearLayout>
